# phrugal

./: .gitignore  .readthedocs.yaml  README.md  architecture-draft.md  pyproject.toml
.github/workflows/: py-build-test.yml  python-test.yml
doc/: conf.py  config-params.csv  configuration.rst  index.rst
src/phrugal/: __init__.py  _version.py  border_decoration.py  border_decorator.py  cli.py  composer.py  composition.py  decorated_image.py  decoration_config.py  exif.py  geocode.py  image.py
test/: test_border_decorator.py  test_composer.py  test_exif.py  test_geocode.py
