[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "versioneer[toml]==0.29",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "Phrugal"
description = "A tool for efficient multi-image printing with borders"
authors = [{ name = "Martin Demling", email = "0x6d64@martin-demling.de" }]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0-or-later",
    "Operating System :: OS Independent",
]
dependencies = [
    "Pillow>=8.0.0",
    "exifread>=3.0",
    "geopy>=2.4.1",
]

[project.optional-dependencies]
dev = ["black", "ruff", "coverage"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/phrugal/_version.py"
versionfile_build = "phrugal/_version.py"
tag_prefix = ""
parentdir_prefix = "phrugal-"

#[project.scripts]
#phrugal = "phrugal.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]