[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "versioneer[toml]==0.29",
    "wheel",
    "sphinx",
]
build-backend = "setuptools.build_meta"

[project]
name = "Phrugal"
description = "A tool for efficient multi-image printing with borders"
authors = [{ name = "Martin Demling", email = "0x6d64@martin-demling.de" }]
readme = { file = 'README.md', content-type = 'text/markdown' }
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
requires-python = ">= 3.7"  # one reason is guaranteed behavior of odering in dict
dependencies = [
    "Pillow>=8.0.0",
    "exifread>=3.0",
    "geopy>=2.4.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "coverage",
    "sphinx",
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/phrugal/_version.py"
versionfile_build = "phrugal/_version.py"
tag_prefix = ""
parentdir_prefix = "phrugal"

[project.scripts]
phrugal = "phrugal.cli:run_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]